# waka-tray

./: Cargo.toml  README.md
src/: config.rs  main.rs  waka_api.rs
