[package]
name = "waka-tray"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
core-foundation = "0.10.0"
dirs = "5.0.1"
env_logger = "0.11.5"
image = "0.25.2"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = "1.0.210"
tao = "0.30.0"
tokio = "1.40.0"
toml = "0.8.19"
tray-icon = "0.17.0"

[package.metadata.bundle]
identifier = "io.github.goverclock.waka-tray"
